[gd_scene load_steps=11 format=2]

[ext_resource path="res://ASSETS/2players_button.png" type="Texture" id=1]
[ext_resource path="res://ASSETS/iniciar_button.png" type="Texture" id=2]
[ext_resource path="res://ASSETS/logo_color.png" type="Texture" id=3]
[ext_resource path="res://ASSETS/3players_button.png" type="Texture" id=4]
[ext_resource path="res://ASSETS/4players_button.png" type="Texture" id=5]
[ext_resource path="res://ASSETS/bg .png" type="Texture" id=6]
[ext_resource path="res://MainMenu/MenuPrincipal.gd" type="Script" id=7]
[ext_resource path="res://ASSETS/2players_buttonOverlay.png" type="Texture" id=8]
[ext_resource path="res://ASSETS/3players_buttonOverlay.png" type="Texture" id=9]
[ext_resource path="res://ASSETS/4players_buttonOverlay.png" type="Texture" id=10]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackGround" type="Sprite" parent="."]
position = Vector2( 961.048, 540.744 )
scale = Vector2( 0.99718, 1 )
texture = ExtResource( 6 )

[node name="2Player" type="TextureButton" parent="."]
visible = false
margin_left = 245.384
margin_top = 703.915
margin_right = 649.384
margin_bottom = 893.915
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3Player" type="TextureButton" parent="."]
visible = false
margin_left = 729.335
margin_top = 703.915
margin_right = 1133.33
margin_bottom = 893.915
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 9 )

[node name="4Player" type="TextureButton" parent="."]
visible = false
margin_left = 1238.28
margin_top = 703.915
margin_right = 1642.28
margin_bottom = 893.915
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Iniciar" type="TextureButton" parent="."]
margin_left = 697.525
margin_top = 653.915
margin_right = 1157.53
margin_bottom = 870.915
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Caminhando" type="Sprite" parent="."]
position = Vector2( 929.642, 242.739 )
texture = ExtResource( 3 )
[connection signal="pressed" from="2Player" to="." method="_on_2Player_pressed"]
[connection signal="pressed" from="3Player" to="." method="_on_3Player_pressed"]
[connection signal="pressed" from="4Player" to="." method="_on_4Player_pressed"]
[connection signal="pressed" from="Iniciar" to="." method="_on_Iniciar_pressed"]
